:wrench: Fixes overflow table error in locate nearby facilities page

--- a/src/pages/credit points/styles.scss
+++ b/src/pages/credit points/styles.scss
@@ -23,7 +23,7 @@
         .parent-item {
             border-radius: 50px 0;
             width: 100%;
-            padding-inline: 9vh;
+            padding-inline: 3em;
             padding-bottom: 5vh;
             background-color: #D9D9D9;
             display: flex;
