--- a/src/pages/locate nearby centres/styles.scss
+++ b/src/pages/locate nearby centres/styles.scss
@@ -2,7 +2,6 @@
     background-color: #66B266;
     height: 100vh;
     width: 100%;
-    position: relative; // Add position relative to allow absolute positioning of child
     padding-top: 15vh;
     display: flex;
     flex-direction: column;
@@ -14,21 +13,23 @@
         justify-content: center;
 
         input {
-            width: 20em;
+            width: 80%;
             height: 2.2em;
             border-radius: 20px;
             border: none;
             background-color: #fff;
-            padding-left: 2em;
-            padding-right: 3em;
+            padding-left: 30px;
+            // padding-right: 3em;
         }
 
         img {
             cursor: pointer;
-            position: relative;
-            right: 2.5em;
+            position: absolute;
+            right: 25px;
+            padding-block: 0.3em;
             z-index: 4;
             height: 30px;
+            z-index: 3;
         }
     }
 
@@ -39,27 +40,51 @@
     }
 
     .table-container {
-        padding-top: 9vh;
+        width: 90vw;
+        height: fit-content;
+        margin-top: 9vh;
+        overflow-y: visible;
+        overflow-x: scroll;
+
 
         .location-table {
-            background-color: #D9D9D9;
+            background-color: #214a6a;
+            color: #fff;
+            width: 100%;
+            border-collapse: separate;
             border-spacing: 0;
 
             th,
             td {
-                border: 1px solid;
+                border: 1px solid black;
                 padding: 20px 5vw;
+                width: fit-content;
+                white-space: nowrap;
+                /* Prevent content from wrapping */
+            }
+
+            tbody tr:nth-child(even) {
+                background-color: #AEAEAE;
             }
 
             tbody tr:nth-child(odd) {
-                background-color: #AEAEAE;
+                background-color: #C6C6C6;
+            }
+
+            a {
+                color: #1F6FFE;
+                text-decoration: none;
+            }
+
+            @media (max-width: 800px) {
+
+
+                th,
+                td {
+                    padding: 12px 5vw;
+                }
             }
         }
     }
-}
 
-@media screen and (max-width: 900px) {
-    .table-container {
-        overflow-x: scroll;
-    }
 }
